logs/Slang/generated/keywords/5.6.2--keyword_output.sv.log
name: output
description: The 'output' keyword should be reserved
should_fail: 1
tags: 5.6.2
files: /home/travis/build/SymbiFlow/sv-tests/tests/generated/keywords/5.6.2--keyword_output.sv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/tests/generated/keywords/5.6.2--keyword_output.sv:8:8: error: expected declarator
    bit output;
       ^
../../home/travis/build/SymbiFlow/sv-tests/tests/generated/keywords/5.6.2--keyword_output.sv:8:9: error: can't use port declaration in module with ANSI style port list
    bit output;
        ^
../../home/travis/build/SymbiFlow/sv-tests/tests/generated/keywords/5.6.2--keyword_output.sv:8:15: error: expected declarator
    bit output;
              ^
